# usopp

./: .gitignore  README.md  README.zh.md  UPDATE_LOG.md  app.config1.js  index.html  package.json  pnpm-lock.yaml  vite.config.ts
.github/workflows/: release.yml
scripts/: release.mjs  update.mjs
src/: App.vue  styles.css  type.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: command.rs  config.rs  database.rs  dto.rs  enums.rs  event.rs  icons.rs  init.rs  lib.rs  main.rs  storage.rs  sysinfo.rs  tray.rs  utils.rs  window.rs
src-tauri/src/search/: application.rs  file.rs  folder.rs  mod.rs
src/components/: Result.vue  Search.vue  Webview.vue
