[package]
name = "usopp"
version = "0.0.0"
description = "usopp"
authors = ["l1uqi"]
license = "MIT"
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [ "devtools", "window-show", "window-hide", "window-start-dragging", "global-shortcut-all", "system-tray", "protocol-asset", "macos-private-api", "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
winreg = "0.52.0"
bincode = "1.3.3"
base64 = "0.21.5"
winapi= {version = "0.3", features = ["winuser", "shellapi", "oleauto"] }
com = "0.5"
widestring = "0.4"
image = "0.23"
cargo-watch = "8.5.2"
pinyin = "0.10"
tokio = { version = "1.35.1", features = ["full"] }
sysinfo = "0.30.5"
strsim = "0.11.0"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
